--- a/index.html
+++ b/index.html
@@ -7,15 +7,23 @@
         <h1>Volume Calculator</h1>
 
         <label for="shape">Choose a shape:</label>
-        <select name="shapes" id="shapes">
-            <option value="cube">Cube</option>
+        <select name="shapes" id="shapes" autocomplete="off">
+            <option value="cube" selected>Cube</option>
             <option value="cylinder">Cylinder</option>
             <option value="sphere">Sphere</option>
         </select>
 
         <ul id='calc-inputs'>
             <!--Inputs for calculations go here-->
+            <!--Default calculation is cube-->
+            <li>
+                <label for="">Length of side:</label>
+                <input type="number" id='side-length' class='inputs'>
+            </li>
         </ul>
+        <input type="button" value='Submit' id='submit'>
+        <p>Volume:</p>
+        <p id='result'></p>
         <script type='module' src='./script.js'></script>
     </body>
 </html>
